--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -24,6 +24,8 @@ jobs:
           pip install -r requirements.txt
           
       - name: execute py script # run main.py
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: python main.py
           
       - name: commit files
