--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -2,8 +2,8 @@ name: run main.py
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 0 1,15 * *' 
+  # schedule:
+  #   - cron: '0 0 1,15 * *' 
 
 jobs:
   build:
